--- a/kmaps-app/src/main/ContentHeader/ContentHeader.scss
+++ b/kmaps-app/src/main/ContentHeader/ContentHeader.scss
@@ -2,10 +2,11 @@
 // * CONTENT SECTION: Content Header
 // --------------------------------------
 .c-content__header__main {
-    padding: 0.65rem 0 0;
-    height: 3.75rem;
+    padding: 0.7rem;
+    height: 4.5rem;
     color: #fff;
     border-top: 0.6rem double #fff;
+    border-bottom: 0.6rem double #fff;
 }
 .c-content__header__main__title {
     margin: 0 0 0 1.5rem;
