--- a/kmaps-app/src/views/Images/images.scss
+++ b/kmaps-app/src/views/Images/images.scss
@@ -8,7 +8,7 @@
     padding-left: 0;
     padding-right: 0;
     /* border-top: 0.3rem solid #b49c59; */
-    max-width: 78vw;
+    /* max-width: 78vw; */
 }
 .c-image {
     //  background-color: #fafafa;
@@ -265,7 +265,7 @@
     display: inline-block;
     line-height: 2.2rem;
 }
-
+/*
 @media only screen and (max-width: 1400px) {
     .c-image__context {
         max-width: 77vw;
@@ -285,3 +285,4 @@
         max-width: 86vw;
     }
 }
+*/
