--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -302,6 +302,8 @@ header.terms
     padding: 0.5rem 1.5rem 4rem;
     font-size: 1.375rem;
     position: relative;
+    height: calc(100vh - 11rem);
+    overflow-y: scroll;
 
     > * {
         // --- max-width: 90rem;
@@ -874,11 +876,7 @@ header.terms
     margin: 0 1.5rem 0 0;
     position: absolute;
     top: -6.75rem;
-    right: -1.5rem;
-
-    position: relative;
-    text-align: right;
-    right: -2rem;
+    right: -1rem;
 
     .btn-primary:not(:disabled):not(.disabled):active,
     .btn-primary:not(:disabled):not(.disabled).active {
