--- a/kmaps-app/src/views/common/FeatureFoldOutViewer.scss
+++ b/kmaps-app/src/views/common/FeatureFoldOutViewer.scss
@@ -37,20 +37,19 @@
     padding: 2rem;
     position: relative;
     margin-bottom: 1rem;
-
+    border-radius: 0.75rem;
     // Icons and arrows, close-x
 
     .c-foviewer__close {
         color: transparent;
         font-size: 3rem;
         position: absolute;
-        top: 0;
-        right: 0;
+        top: 0.75rem;
+        right: 0.75rem;
         width: 4rem;
         height: 4rem;
         border: 0.1rem solid #444;
-        border-radius: 0 0 0 0.5rem;
-        border-width: 0 0 0.1rem 0.1rem;
+        border-radius: 0.5rem;
         background-color: #292929;
 
         span {
@@ -214,11 +213,11 @@
                 color: #eee;
                 background-color: #000;
                 border: 1px solid #444;
-                border-radius: 0.25em;
+                border-radius: 0.6em;
                 background-clip: padding-box;
                 box-shadow: none;
                 font-weight: 400;
-                font-size: 1.25rem;
+                font-size: 1.5rem;
                 text-transform: uppercase;
                 letter-spacing: 0.275rem;
                 text-align: center;
@@ -230,9 +229,10 @@
                     font-size: 1.4rem;
                     &::before {
                         position: relative;
-                        top: 0.2rem;
+                        top: 0.3rem;
                         left: -0.2rem;
-                        transition: all 0.35s;
+                        transition: all 0.2s;
+                        font-size: 1.95rem;
                     }
                 }
                 &:hover {
