--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -299,11 +299,12 @@ header.terms
     background-color: #fcfcfc;
     border: 1px solid #ccc;
     border-radius: 1rem;
-    padding: 0.5rem 1.5rem 4rem;
+    padding: 0.5rem 1.5rem 4rem 2rem;
     font-size: 1.375rem;
     position: relative;
-    height: calc(100vh - 11rem);
-    overflow-y: scroll;
+    height: 100%;
+    //   height: calc(100vh - 11rem);
+    //   overflow-y: scroll;
 
     > * {
         // --- max-width: 90rem;
@@ -875,7 +876,7 @@ header.terms
 .c-buttonGroup__viewMode {
     margin: 0 1.5rem 0 0;
     position: absolute;
-    top: -6.75rem;
+    top: -6rem;
     right: -1rem;
 
     .btn-primary:not(:disabled):not(.disabled):active,
