--- a/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
+++ b/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
@@ -76,11 +76,12 @@
 
 .c-related__item {
     display: block;
-    line-height: 1.5;
+    line-height: 2;
     color: #222;
     font-weight: bold;
-    font-size: 1.25rem;
+    font-size: 1.5rem;
     text-transform: uppercase;
+    letter-spacing: 0.125rem;
     padding: 0.15rem 0 0.5rem 1.25rem;
     margin: 0 0 0.2rem 0.25rem !important;
     background-color: #fff;
@@ -321,7 +322,7 @@
         background: #fff;
         border: 1px solid #ccc;
         border-radius: 1rem;
-        height: calc(100vh - 25rem);
+        //  height: calc(100vh - 25rem);
 
         .kmap-related h3 {
             margin-top: 2rem;
