--- a/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
+++ b/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
@@ -322,7 +322,7 @@
         background: #fff;
         border: 1px solid #ccc;
         border-radius: 1rem;
-        //  height: calc(100vh - 25rem);
+        min-height: 90%;
 
         .kmap-related h3 {
             margin-top: 2rem;
