--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -4,7 +4,7 @@ ul.fancytree-container {
     height: auto !important;
 }
 .c-kmaptree {
-    margin: 0 1rem;
+    margin: 0 1rem 0 0;
     overflow-y: scroll;
     border-style: solid;
     border-color: #929ae4 #929ae4 #929ae4 #c0c0c0;
@@ -13,7 +13,7 @@ ul.fancytree-container {
     border-radius: 0.5rem 0.5rem 3rem 0.5rem;
     background: white;
     font-size: 1.45rem;
-    padding: 0 1rem 2rem;
+    padding: 1rem 1rem 2rem;
     white-space: nowrap;
     /* min-height: calc(100vh - 36rem);
     max-height: calc(100vh - 36rem); */
@@ -33,11 +33,11 @@ ul.fancytree-container {
 .l-column__related .c-kmaptree {
     width: 23.5rem;
     transition: width 0.4s;
-    transition-delay: 0.5s;
+    transition-delay: 0.35s;
     height: calc(100vh - 38rem);
 }
 .l-column__related .c-kmaptree:hover {
-    width: 45rem;
+    width: 55rem;
 }
 .c-perspective-select {
     white-space: nowrap;
