--- a/kmaps-app/src/views/common/FeatureCard/FeatureCard.scss
+++ b/kmaps-app/src/views/common/FeatureCard/FeatureCard.scss
@@ -18,7 +18,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
     grid-gap: 0.8rem;
-    margin: 4rem 2rem 3rem;
+    margin: 0 2rem 3rem;
 }
 .card-deck .card {
     flex: 1 1 15%;
@@ -318,7 +318,6 @@
     line-height: 1.3em;
     margin-bottom: 1.5em;
     color: #000;
-    letter-spacing: 0.0175rem;
 }
 
 .shanti-field-uid span {
