--- a/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
+++ b/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
@@ -1,80 +1,92 @@
 .c-featurePager__container {
     text-align: end;
     margin: 0;
-    //padding: 0 4rem;
 
     &.top {
         margin-bottom: 1rem;
     }
-
     &.bottom {
         margin-top: 2rem;
     }
-}
 
-.c-featurePager__resultSummary {
-    float: left;
-    margin-left: 0;
-    margin-bottom: 0.75rem;
-    position: relative;
-    top: 1rem;
-    font-size: 1.35rem;
-    .start,
-    .end {
-        display: inline-block;
-        margin-left: 0px;
-        margin-right: 4px;
+    .c-featurePager__resultSummary {
+        white-space: nowrap;
+        .start,
+        .end {
+            display: inline-block;
+            margin-left: 0px;
+            margin-right: 4px;
+        }
+    }
+    .c-featurePager__navButtons {
+        white-space: nowrap;
+        .icon {
+            margin: 0;
+            padding: 0.2rem 1rem;
+            color: #888;
+            cursor: pointer;
+            font-size: 90%;
+            &:hover {
+                color: #555;
+            }
+        }
+        span input {
+            height: 2.5rem;
+            position: relative;
+            top: -0.05rem;
+            margin-left: 1rem;
+            margin-right: 0.5rem;
+            text-align: center;
+            border: 1px solid #ccc;
+        }
+        .c-pager__counterWrapper {
+            margin-right: 1rem;
+
+            span {
+                padding: 0;
+                margin: 0;
+                width: 15px;
+            }
+            .c-pager__counterMax {
+                padding: 0 1rem;
+            }
+            .c-featurePager__itemCount {
+                white-space: nowrap;
+
+                .react-numeric-input {
+                    padding-right: 2rem;
+                    padding-left: 0.5rem;
+                }
+                input {
+                    margin-left: 0.5rem;
+                    padding: 0.5rem 0;
+                    text-align: center;
+                    width: 6rem;
+                }
+            }
+        }
     }
 }
-.c-featurePager__navButtons {
-    display: inline-block;
-    font-size: 1.5rem;
-    white-space: nowrap;
-    margin: 1rem 0;
-}
-.c-featurePager__navButtons .icon {
+
+.c-view {
     margin: 0;
-    padding: 0.2rem 1rem;
-    //  font-size:90%;
-    color: #888;
-    cursor: pointer;
+    .c-featurePager__container {
+        margin-bottom: 1rem;
+        padding: 2.5rem 3rem 0;
+        .icon {
+            margin-right: 0.75rem;
+            padding: 0 0.75rem;
+        }
+        &.top {
+        }
+    }
 }
-.c-featurePager__navButtons .icon:hover {
-    color: #555;
+.c-view .c-featurePager__container {
+    padding: 0 3rem 0;
+    display: flex;
+    justify-content: space-between;
+    flex-flow: row wrap;
 }
-.c-featurePager__navButtons .icon {
-    font-size: 90%;
-}
-.c-pager__counterWrapper {
-    margin-right: 1rem;
-}
-.c-pager__counterWrapper span {
-    padding: 0;
-    margin: 0;
-    width: 15px;
-}
-.c-featurePager__navButtons span input {
-    height: 2.5rem;
-    position: relative;
-    top: -0.05rem;
-    margin-left: 1rem;
-    margin-right: 0.5rem;
-    text-align: center;
-    border: 1px solid #ccc;
-}
-.c-pager__counterWrapper .c-pager__counterMax {
-    padding: 0 1rem;
-}
-.c-featurePager__itemCount {
-    float: right;
-}
-.c-featurePager__itemCount .react-numeric-input {
-    padding-right: 2rem;
-    padding-left: 0.5rem;
-}
-.c-featurePager__itemCount input {
-    margin-left: 0.5rem;
-    padding: 0.5rem 0;
-    text-align: center;
-    width: 6rem;
+.c-view .c-featurePager__container > * {
+    margin-bottom: 1.5rem;
 }
