--- a/kmaps-app/src/views/Terms/TermDictionaries/TermDictionaries.css
+++ b/kmaps-app/src/views/Terms/TermDictionaries/TermDictionaries.css
@@ -32,7 +32,7 @@
 ul.sui-termDicts__dict-wrapper {
     margin-top: 0.7rem;
     margin-bottom: 2.4rem;
-    border-bottom: 1px solid #91693e;
+    border-bottom: 1px solid #ccc;
     list-style: none;
     padding-inline-start: 20px;
 }
