--- a/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
+++ b/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
@@ -1,3 +1,6 @@
+@import '../../../index-variables';
+@import '../../../css/fonts/shanticon/style.css';
+
 .c-featurePager__container {
     text-align: end;
     margin: 0;
