--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -1109,7 +1109,9 @@ header.terms + .two-columns .c-view__wrapper.gallery {
         filter: alpha(opacity=85);
         opacity: 0.85;
     }
-
+    .ancestors {
+        font-size: 1.35rem;
+    }
     // Ancestors (and captions) for kmaps in list view
     .ancestors,
     .caption {
