--- a/kmaps-app/src/main/SiteHeader/SiteHeader.scss
+++ b/kmaps-app/src/main/SiteHeader/SiteHeader.scss
@@ -1,4 +1,5 @@
 @import '../../index-variables';
+@import '../../css/fonts/shanticon/style.css';
 
 // Site Banner
 .c-site__header {
@@ -43,8 +44,6 @@
         flex: 1 1;
         background-color: #fff !important;
         padding: 0;
-        /* padding: 0;
-        font-size: 1.5rem;*/
     }
 
     // -------------------
