--- a/kmaps-app/src/views/common/FeatureCard/FeatureCard.scss
+++ b/kmaps-app/src/views/common/FeatureCard/FeatureCard.scss
@@ -1,4 +1,5 @@
 @import '../../../index-variables';
+@import '../../../css/fonts/shanticon/style.css';
 
 // JSON Dev Utility -
 .card-body .c-button__json {
