Style updates & fixes Image viewer width, Image foldout viewer img styles, consistent margins

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -905,6 +905,7 @@ header.terms + .two-columns .c-view__wrapper.gallery {
         border-width: 0.1rem 0 0;
         background-color: #fcfcfc;
         margin-left: 4rem !important;
+        line-height: 2;
     }
     .u-icon__plus {
         color: $color-terms;
