--- a/kmaps-app/src/views/Images/images.scss
+++ b/kmaps-app/src/views/Images/images.scss
@@ -126,8 +126,8 @@
         overflow-x: auto;
         overflow-y: hidden;
         white-space: nowrap;
-        margin: 2rem 0 1.25rem;
-        max-width: 81vw;
+        margin: 2rem auto 1.25rem;
+        max-width: 70vw;
         .thumb {
             display: inline-block;
             height: 100px;
