--- a/kmaps-app/src/views/common/FeatureFoldOutViewer.scss
+++ b/kmaps-app/src/views/common/FeatureFoldOutViewer.scss
@@ -158,6 +158,9 @@
         .c-foviewer__image img {
             max-width: 100%;
             max-height: 400px;
+            border-radius: 0.75rem;
+            padding: 0.2rem;
+            border: 2px solid #888;
         }
 
         .c-foviewer__details {
