--- a/kmaps-app/src/views/Sources/sources.scss
+++ b/kmaps-app/src/views/Sources/sources.scss
@@ -5,7 +5,7 @@ main.l-column__main.sources {
 .c-source {
     min-height: 65rem;
     margin: 1rem auto;
-    background-color: #f7f7f7;
+    background-color: #fff;
     border: 1px solid #ccc;
     border-radius: 0.6rem;
     padding: 2.5rem 3rem 5rem 3.5rem;
