--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -568,15 +568,18 @@ header.terms
         letter-spacing: 0.0525rem;
         background-color: #3f49b1;
         border-bottom: 0.6rem double #fff;
+        height: 5rem;
+        display: flex;
+        justify-content: space-between;
 
         .treeNav-header__title {
             margin-left: 2rem;
-            font-weight: bold;
             color: #f0f0f0;
-            padding: 0.2rem 0 0;
-            line-height: 1.55;
+            padding: 0;
+            line-height: 2;
+            font-size: 2.1rem;
             vertical-align: middle;
-            letter-spacing: 0.0525rem;
+            letter-spacing: 0.075rem;
         }
         .treeNav-header__closeButton {
             padding: 0;
@@ -607,31 +610,44 @@ header.terms
         position: relative;
         background-color: #3f49b1;
         margin-right: -1rem;
-        transition: opacity 0.2s ease-in-out;
-        opacity: 0.9;
+        transition: opacity 0.1s ease-in-out;
         border-bottom: 0.6rem double #fff;
+        display: flex;
+        justify-content: space-between;
+        padding-right: 2rem;
+        height: 5rem;
+
         &:hover {
-            opacity: 1;
         }
         button {
             color: #fff;
+            background-color: #3f49b1;
             border: none;
-            padding: 0.325rem 2rem 0.35rem;
+            opacity: 0.9;
+            padding: 0.35rem 1rem 0.25rem 0.75rem;
             display: inline-block;
+            border-radius: 2rem;
+            border: 1px dashed #999;
+            margin: 0.5rem 1rem 0.6rem 1.5rem;
+
             .header-icon svg {
-                font-size: 1.95rem;
+                font-size: 2rem;
                 position: relative;
                 bottom: 0.275rem;
                 transition: all 0.2s ease-in-out;
-                transform: scale(1.08);
-                opacity: 0.9;
+                transform: scale(1);
             }
-            &:hover .header-icon svg {
-                transform: scale(0.95);
+            &:hover {
                 opacity: 1;
+
+                .header-icon svg {
+                    transform: scale(1.1);
+                }
             }
-            &:active .header-icon svg {
-                transform: scale(1.08);
+            &:active {
+                .header-icon svg {
+                    transform: scale(1.08);
+                }
             }
             .header-label-count {
                 font-size: 1.45rem;
@@ -663,11 +679,17 @@ header.terms
                 color: #000;
             }
         }
+        button:first-of-type {
+            background-color: #5963c9;
+            opacity: 0.85;
+            &:hover {
+                border-color: #ccc;
+                border-style: solid;
+                opacity: 1;
+            }
+        }
         /* CLOSE - Search Column -- Filters */
         .search-column-close-filters {
-            position: absolute;
-            right: 2rem;
-            bottom: 0.025rem;
             padding: 0;
             margin: 0;
             border: none;
@@ -682,7 +704,7 @@ header.terms
             }
             &:hover {
                 opacity: 0.8;
-                transform: scale(1.05);
+                transform: scale(1.25);
             }
             &:active {
                 transform: scale(0.95);
@@ -710,7 +732,7 @@ header.terms
             border-radius: 0.5rem;
             background-color: #a27f1c;
             color: #fff;
-            transition: all 0.25s ease-in-out;
+            transition: all 0.2s ease-in-out;
             position: relative;
             top: -0.1rem;
             opacity: 0.9;
@@ -816,13 +838,10 @@ header.search + .two-columns .c-buttonGroup__viewMode {
     position: relative;
     top: 0;
     left: 0;
-    width: 100%;
-    text-align: right;
     padding-right: 2rem;
-
     width: 100%;
     text-align: right;
-    margin-bottom: 1.5rem;
+    margin-bottom: 0.5rem;
 }
 header.terms + .two-columns .c-buttonGroup__viewMode {
     position: relative;
@@ -874,6 +893,7 @@ header.terms + .two-columns .c-buttonGroup__viewMode {
 .c-view__wrapper {
     border: none;
     padding-top: 1rem;
+    background: white;
 }
 .c-view__wrapper.gallery {
     margin: 0 1.5rem 2rem;
