--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -28,7 +28,7 @@ ul.fancytree-container {
     margin: 0.45rem 0 0;
     padding-top: 1rem;
     padding-left: 2rem;
-    border-width: 0.075rem 0.1rem 0.3rem 0.1rem;
+    border-width: 0.075rem 0.1rem 0.3rem 0;
     border-top-left-radius: 0;
 }
 .l-column__related .c-kmaptree {
