Style update kmaps-Image view mobile-tab, display tab highlighted radius

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -96,6 +96,7 @@ div.image-wrapper.center figcaption {
     cursor: default;
     border-top-width: 0.2rem;
     border-bottom-width: 0.2rem;
+    border-radius: 1rem;
 }
 
 .c-buttonGroup__viewMode .btn:not(:disabled):not(.disabled) {
