Style update Texts viewer, Images meta layout, list view bg

--- a/kmaps-app/src/views/Texts/TextsViewer.sass
+++ b/kmaps-app/src/views/Texts/TextsViewer.sass
@@ -15,6 +15,7 @@
     background-color: #fcfcfc
     padding-right: 0
     padding-left: 0
+    max-height: 82vh;
 
   .sui-content
     background-color: #eee
@@ -363,6 +364,7 @@
     padding: 0
     min-width: 30rem
     max-width: 100%
+    height: calc(100vh - 24rem)
     background-color: #eee
     color: #333
 
