--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -646,14 +646,15 @@ header.terms
             }
             &:active {
                 .header-icon svg {
-                    transform: scale(1.08);
+                    transform: scale(1.2);
                 }
             }
             .header-label-count {
-                font-size: 1.45rem;
+                font-size: 1.5rem;
                 letter-spacing: 0.125rem;
                 margin-left: 1rem;
                 font-style: italic;
+                font-weight: bold;
                 .badge {
                     font-size: 1.1rem;
                     letter-spacing: 0.075rem;
@@ -922,7 +923,7 @@ header.terms + .two-columns .c-view__wrapper.gallery {
         /* border: unset; */
         border-color: #cde3f7;
         border-width: 0.1rem 0 0;
-        background-color: #fcfcfc;
+        background-color: #fff;
         margin-left: 4rem !important;
         line-height: 2;
     }
