--- a/kmaps-app/src/views/Images/images.scss
+++ b/kmaps-app/src/views/Images/images.scss
@@ -160,6 +160,7 @@
     font-size: 1.25rem;
     max-width: 120rem;
     margin: 8px auto 9rem;
+    padding: 0;
     hr {
         border-top: 2px solid #dddddd;
     }
@@ -206,13 +207,14 @@
     }
     .l-meta.row {
         min-height: 400px;
-        margin: 2rem 1rem 0;
+        margin: 2rem 0 0;
         border: 1px solid #ddd;
         border-top: 4px solid #b49c59;
+        border-bottom: 4px solid #b49c59;
         color: #000000;
         background-color: white;
-        padding: 2rem 1rem 5rem;
-        box-shadow: 0 24rem 32rem 20rem rgba(150, 150, 150, 0.1);
+        padding: 2rem 0 5rem;
+        box-shadow: 0 20rem 29rem 20rem rgba(50, 50, 50, 0.08);
     }
     .c-image__metatitle {
         color: #777;
