Style breadcrumb positioning, image meta mobile layout

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -933,8 +933,10 @@ header.terms + .two-columns .c-view__wrapper.gallery {
         margin-right: 0;
         margin-left: -5rem;
         padding: 0 1.5rem;
-        font-size: 1.2rem;
+        font-size: 1.4rem;
         cursor: pointer;
+        position: relative;
+        top: 0.15rem;
         &:hover {
             opacity: 0.8;
         }
