--- a/kmaps-app/src/views/Images/images.scss
+++ b/kmaps-app/src/views/Images/images.scss
@@ -25,6 +25,7 @@
     background-color: #222222;
     border-bottom: 10px solid #b49c59;
     width: 100%;
+    border-radius: 1rem;
 
     .c-image__viewer-row {
         /*  padding-top: 35px;*/
@@ -104,6 +105,7 @@
     .c-image__caption {
         color: white;
         text-align: center;
+        padding-bottom: 2rem;
     }
     .c-image__title {
         margin-top: 0px;
