--- a/kmaps-app/src/main/ContentHeader/ContentHeader.scss
+++ b/kmaps-app/src/main/ContentHeader/ContentHeader.scss
@@ -45,11 +45,11 @@
 .c-content__header__breadcrumb,
 .c-content__header__breadcrumb .breadcrumb-item {
     color: #fff;
-    line-height: 1.55;
+    line-height: 1.45;
 }
 
 .c-content__header__breadcrumb .breadcrumb-item {
-    padding: 0 0 0.175rem;
+    padding: 0;
     border-bottom: 1px solid transparent;
     margin-left: 2rem;
     transition: border 0.3s;
@@ -70,7 +70,7 @@
     margin-right: 0;
     margin-left: 1rem;
     font-size: 1.6rem;
-    line-height: 1;
+    line-height: 1.3;
     &:hover {
         cursor: default;
         text-decoration: none;
