Style update font size larger in related viewer overall content

--- a/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
+++ b/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
@@ -323,10 +323,9 @@
         background: #fff;
         border: 1px solid #ccc;
         border-radius: 1rem;
-
+        font-size: 1.45rem;
         .kmap-related h3 {
             margin-top: 2rem;
-            margin-bottom: 0;
             font-size: 1.35rem;
             font-weight: bold;
             text-transform: capitalize;
